amy's comments, more credit to bloom and hietpas

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -9,7 +9,7 @@ The work described below represents a team effort including many members of the 
 
 % \todo{Cast this introduction more in the light of functional assays and less about disease. (Save that for the next chapter.)}
 
-Deep Mutational Scanning~(DMS)~\cite{fowler_high-resolution_2010}, a strategy for large-scale functional testing of variants, yields functional maps describing a large fraction of substitutions for an often substantial subset of residue positions. The assays used for DMS studies are diverse, often measuring different aspects of a protein's behaviour. Functional complementation assays test a variant's impact on overall protein function by testing the variant gene's ability to rescue the phenotype caused by reduced activity of the wild type gene (or its ortholog in the case of trans-species complementation)~\cite{lee_complementation_1987,osborn_rescuing_2007}. In a previous paper, Song Sun and other members of the Roth Lab have previously found cell-based functional complementation assays to accurately identify disease variants across a diverse collection of human disease genes~\cite{sun_extended_2016}. 
+Deep Mutational Scanning~(DMS)~\cite{fowler_high-resolution_2010,ernst_coevolution_2010,hietpas_experimental_2011}, a strategy for large-scale functional testing of variants, yields functional maps describing a large fraction of substitutions for an often substantial subset of residue positions. The assays used for DMS studies are diverse, often measuring different aspects of a protein's behaviour. Functional complementation assays test a variant's impact on overall protein function by testing the variant gene's ability to rescue the phenotype caused by reduced activity of the wild type gene (or its ortholog in the case of trans-species complementation)~\cite{lee_complementation_1987,osborn_rescuing_2007}. In a previous paper, Song Sun and other members of the Roth Lab have previously found cell-based functional complementation assays to accurately identify disease variants across a diverse collection of human disease genes~\cite{sun_extended_2016}. 
 
 There are many challenges to the DMS strategy.  One challenge is establishment of robust interpretable assays that measure each variant's impact on the disease-relevant functions of a gene. Another is that the fraction of possible amino acid changes that are measured varies from map to map. Finally, many maps do not control for the overall quality of measurements, or estimate the quality of each measurement. The lack of a comprehensively measured map of known-quality functional impact scores limits the opportunity for confident use of DMS maps to evaluate specific variants.
 
@@ -38,7 +38,7 @@ In the following sections, I will first describe a version of the framework call
 As an initial test of the overall framework, we first aimed to generate a map of functional missense variation for \gene{UBE2I}. Our goals for this map were as follows: (i) High and even coverage of the full spectrum of amino acid changes; (ii) Determination of mutant effects on overall protein functionality; (iii) High fidelity of functional effect readouts. We therefore designed the different stages of the framework accordingly. 
 
 For Stage 1 of the DMS-BarSeq framework---mutagenesis---to achieve a relatively even representation of all possible single amino acid substitutions, we wished to allow multiple mutations per clone. This would not only allow for greater mutational coverage for any given library size, but it would also offer an opportunity to discover intragenic epistatic relationships between variants.  To fulfill these requirements, we developed a mutagenesis protocol (Precision Oligo-Pool based Code Alteration or POPCode) which generates random codon replacements. 
-At the second stage---library generation---we wished to be able to track the fitness effects of each individual mutant clone rather than just average effects of mutations across the population, as this could be expected to allow for higher quality measurements. Thus, in Stage 2 of the framework, we opted to assign molecular barcodes to each clone that could be identified by sequencing. To catalogue the pairing of mutant genotypes with barcodes, we developed a novel multiplex amplicon sequencing method called KiloSeq, in collaboration with Joe Mellow at SeqWell Inc, Boston. 
+At the second stage---library generation---we wished to be able to track the fitness effects of each individual mutant clone rather than just average effects of mutations across the population, as this could be expected to allow for higher quality measurements. Thus, in Stage 2 of the framework, we opted to assign molecular barcodes to each clone that could be identified by sequencing. To catalogue the pairing of mutant genotypes with barcodes, we developed a novel multiplex amplicon sequencing method called KiloSeq, in collaboration with Joseph Mellor at SeqWell Inc, Boston. 
 The selection process (Stage 3) was performed as a yeast complementation assay, to allow for determination of overall functional effects of mutations. The assay would be performed as a time series in triplicates, as this again promised to allow for higher quality of readouts 
 Finally, Stage 4, consists of barcode sequencing and statistical analysis. All four stages will be described in further detail in the following subsections.
 
@@ -99,7 +99,7 @@ The third phase---alignment and variant calling---is then executed for each barc
 After successful genotyping with kiloseq, I determined the subset of clones that (i) contained at least one missense mutation, (ii) did not contain any insertions or deletions, (iii) did not contain mutations outside of the ORF, (iii) had unique barcodes, and (iv) had sufficient read coverage during KiloSeq to allow for confident genotyping.
 Over half of the clones in the library conformed to these criteria. The single largest reason for exclusion was the occurrence of indels and CNVs (Figure~\ref{fig:popcode_census}A). 
 
-An analysis of the mutation signatures across clones generated by POPCode revealed that two different mechanisms appear to underly mutagenesis. When considering only mutations that change more than one base in a given codon, there is an equal chance for every possible base except in the third position, where almost no adenine or cytosine was introduced. This is consistent with the \texttt{NNK} degeneracy code used in the POPCode oligo design. By contrast, variants that change only a single base in a given codon show a strong bias for transitions over transversions. These could be introduced due to polymerase error (Figure~\ref{fig:popcode_census}B). This secondary source of variation is also reflected in the relative share of single nucleotide variants, which make up 56\% of mutations (Figure~\ref{fig:popcode_census}C). As a consequence, when examining the mutation coverage across the sequence of the ORF, it is clearly visible that the share of amino acids reachable with a single nucleotide change from the respective wildtype codon is much closer to saturation than the the set of all possible amino acid changes (Figure~\ref{fig:popcode_census}D). Additionally, some hotspots are visible in which the mutation rate is higher, which is likely due to different hybridization efficiencies of oligos across the ORF sequence.
+An analysis of the mutation signatures across clones generated by POPCode revealed that two different mechanisms appear to underlie mutagenesis. When considering only mutations that change more than one base in a given codon, there is an equal chance for every possible base except in the third position, where almost no adenine or cytosine was introduced. This is consistent with the \texttt{NNK} degeneracy code used in the POPCode oligo design. By contrast, variants that change only a single base in a given codon show a strong bias for transitions over transversions. These could be introduced due to polymerase error (Figure~\ref{fig:popcode_census}B). This secondary source of variation is also reflected in the relative share of single nucleotide variants, which make up 56\% of mutations (Figure~\ref{fig:popcode_census}C). As a consequence, when examining the mutation coverage across the sequence of the ORF, it is clearly visible that the share of amino acids reachable with a single nucleotide change from the respective wildtype codon is much closer to saturation than the the set of all possible amino acid changes (Figure~\ref{fig:popcode_census}D). Additionally, some hotspots are visible in which the mutation rate is higher, which is likely due to different hybridization efficiencies of oligos across the ORF sequence.
 
 Using a pinning robot, we re-arrayed the subset of usable clones into a condensed final library of 40 plates. This final library comprised 6,553 \gene{UBE2I} variants, covering different combinations of 1,848 (61\% of all possible) unique amino acid changes. In preparation for the next stage, variant plasmids were pooled, together with barcoded empty vector and wild type control plasmids.
 
@@ -137,11 +137,13 @@ Before further refinement in Stages 5 and 6, I assessed the quality of complemen
 
 As a further sanity check, I next examined evolutionary conservation and common predictors of deleteriousness, such as PolyPhen-2~\cite{adzhubei_predicting_2001} and PROVEAN~\cite{choi_predicting_2012}.  Although each of these measures is far from perfect in predicting the functionality of amino acid changes, they should and did each correlate with functionality (Figure~\ref{fig:barseqValidation}D,E,F). Finally, I confirmed that, as expected, amino acid residues on the protein surface are more tolerant to mutation than those in the protein core or within interaction interfaces (Figure~\ref{fig:barseqValidation}G).  Taken together, these observations support the biological relevance of the DMS-BarSeq approach.
 
+%TODO: Spacing issues in figure legend?
+
 \begin{landscape}
 \begin{figure}
 	\centering
 	\includegraphics[width=9in]{img/barseq-validation.pdf}
-	\caption{Validation of DMS-BarSeq of UBE2I. A: Correlation between technical replicates B: Correlation between biological replicates. C: Manual complementation spotting assay compared to DMS fitness measurements. D: Comparison of fitness levels for mutations at positions with low, medium and high evolutionary conservation. E:Comparison of fitness levels for mutations at positions within the hydrophobic core, at interaction interfaces, and unused surfaces}
+	\caption{Validation of DMS-BarSeq of UBE2I. A: Correlation between technical replicates B: Correlation between biological replicates. C: Manual complementation spotting assay compared to DMS fitness measurements. D: Comparison of fitness levels for mutations at positions with low, medium and high evolutionary conservation. E: Comparison of fitness levels for mutations at positions within the hydrophobic core, at interaction interfaces, and unused surfaces}
 	\label{fig:barseqValidation}
 \end{figure}
 \end{landscape}
@@ -223,7 +225,7 @@ The use of codon-replacement mutagenesis allows for the observation of a fuller 
 
 POPCode mutagenesis was performed by Atina Cot\'e, Jennifer Knapp and Marta Verby in the following steps: (i) A uracil-containing wild type template was generated by PCR-amplifying the ORF in the presence of dUTP, (ii) pooled oligonucleotides were hybridized with the template and gaps between hybridized oligonucleotides were filled with the non-strand-displacing Sulpholobus Polymerase IV (NEB) or Kapa HiFi Uracil+ DNA polymerase (KapaBiosystems) and sealed with T4 DNA ligase (NEB), (iii) the uracil-doped wild-type template was then degraded using Uracil-DNA-Glycosylase (UDG) (NEB) and the mutagenesis product was amplified with attB-sites-containing primers to allow the downstream Gateway BP cloning.
 
-\paragraph{Library construction:} Library construction was performed by Atina Cot\'e, Jennifer Knapp and Marta Verby. Pooled mutagenesis product carrying attB sites is cloned in to barcoded expression pHYC expression vectors in en-masse Gateway BP and LR reactions and subsequently transformed into \species{E.~coli}. Automated colony picking using a Biomatrix BM5-BC robot (S\&P Robotics) robot was used to array $\sim$20,000 clones.
+\paragraph{Library construction:} Library construction was performed by Atina Cot\'e, Jennifer Knapp and Marta Verby following the \textit{en masse} LR cloning protocol previously described in Yachie \etal\ \cite{yachie_pooled-matrix_2016}. Pooled mutagenesis product carrying attB sites is cloned in to barcoded expression pHYC expression vectors in en-masse Gateway BP and LR reactions and subsequently transformed into \species{E.~coli}. Automated colony picking using a Biomatrix BM5-BC robot (S\&P Robotics) robot was used to array $\sim$20,000 clones.
 
 \subsection{KiloSeq and library condensation}
 
@@ -240,11 +242,11 @@ KiloSeq library preparation was performed by Atina Cot\'e, Jennifer Knapp and Ma
 
 Sequencing data is processed using a custom pipeline I developed that runs on a high-performance computing cluster (Figure~\ref{fig:kiloseqPipeline}). The source code is provided on the attached storage media and can also be found online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/kiloseq/}}.
 
-After identification of desirable clones using KiloSeq, the selected clones were condensed into a smaller library using the Biomatrix BM5-BC robot (S\&P Robotics). I created a custom software library to automatically program the robot's picking protocol. It is provided on the attached storage media and can also be found online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/biomatrix/}}.
+After identification of desirable clones using KiloSeq, the selected clones were condensed into a smaller library using the Biomatrix BM5-BC robot (S\&P Robotics). I created a custom software library to automatically program the Biomatrix robot's picking protocol. It is provided on the attached storage media and can also be found online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/biomatrix/}}.
 
 \subsection{DMS-BarSeq}
 
-\paragraph{Complementation competition experiment:} Complementation experiments were performed by Jennifer Knapp, Song Sun and Marta Verby. After pooling the barcoded \gene{UBE2I} variant library it was transformed \textit{en masse} together with barcoded null and wildtype controls into an \species{S. cerevisiae} \textit{ubc9-ts} strain. 
+\paragraph{Complementation competition experiment:} Complementation experiments were performed by Jennifer Knapp, Song Sun and Marta Verby. After pooling the barcoded \gene{UBE2I} variant library, it was transformed \textit{en masse} together with barcoded null and wildtype controls into an \species{S. cerevisiae} \textit{ubc9-ts} strain. 
 The pool was grown in triplicates on solid media at 25\celsius\ and 37\celsius\ to be examined at 5 different timepoints (0h, 6h, 12h, 24h, 48h), which required a total of 30 plates. At their respective timepoints, plates were scraped, OD quantified, and their barcode loci amplified with primers carrying sample-specific tags. The amplified product is then sequenced on an Illumina NextSeq 500.
 
 \paragraph{Sequence analysis:} I created a custom sequence analysis pipeline, which was used to identify and count individual sample tags and barcode combinations within each read. The pipeline source code is provided on the attached storage media and can also be found online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/screen_pipeline/}}.
