--- a/conclusion.tex
+++ b/conclusion.tex
@@ -24,11 +24,15 @@ Moreover, as mentioned in section~\ref{ch2discussion} of the previous chapter, w
 \section{Outlook}
 
 \subsection{Using DMS data in a clinical context}
+
 %DMS in clinical contexts
 As introduced in chapter~\ref{ch:intro}, a major motivating factor behind the development of our framework is to address the growing problem of variants of uncertain significance observed in the clinic. While our results show that functional maps as produced by our framework can be helpful in the effort of VUS reclassification, a single line of evidence is not usually sufficient. Even though the ACMG considers functional assays among the strongest classification criteria, they require at least one additional criterium of moderate strength, such as enrichment in cases over controls, or negligible allele frequency in the general population~\cite{richards_standards_2015}. While most of the data informing the required criteria cannot be generated \textit{en masse}, other information, such as allele frequencies in the general population are available from the 1000 genomes project~\cite{the_1000_genomes_project_consortium_global_2015} and the genome and exome aggregation database (GnomAD)~\cite{lek_analysis_2016}. Thus an important goal for the future would be the construction of a public database with an underlying automatic data integration and classification system that obtains information from available sources and automatically applies the ACMG's recommended decision-making process towards variant classification. Classification results should be presented transparently, revealing the individual underlying evidence, confidence levels, and reasoning structure. 
 Alternatively, it is conceivable that future iterations of DMS maps can be validated to be sufficiently rigorous to allow for a change in ACMG guidelines.
 
-However, the commitment towards the construction of a resource is only warranted if its primary source of information, functional maps generated using Deep Mutational Scanning, can continue to be provided. The Roth lab is planning to continue building functional maps of disease genes and to expand the list of genes amenable to deep mutational scanning. A shortlist of $\sim$100 genes is planned to be addressed in the coming years. However, this undertaking is a costly one. Per 500 amino acid positions scanned, approximately \$5500 need to be spent on consumables, primarily for sequencing and oligos for POPCode mutagenesis. Assuming six genes being scanned in parallel, approximately 45 full-time employee hours need to be invested per gene. Ultimately, this undertaking cannot be shouldered by one lab alone and will require outreach to other groups. As shown in chapter~1 section~\ref{dmsIntro}, a fair number of groups are already performing deep mutational scans and may be interested in collaboration. As a first step, the Roth and Fowler labs are already collaborating with respect to mapping a number of heart disease associated genes.
+%TODO: Amy:  discuss the pros and cons of reporting regularized data in a patient care context. 
+Another factor to consider with respect of the presentation of DMS maps for clinical use is the reporting of imputation and regularization. Even though this work has shown that imputed values are equivalent in quality to their experimental counterparts and that regularization leads to improved performance, a sociological bias against computational predictions may lead to users dismissing these data. While full disclosure of data provenance is necessary, it may also lead to the misinterpretation of data if its presentation is not handled carefully.
+
+The commitment towards the construction of a resource is only warranted if its primary source of information, functional maps generated using Deep Mutational Scanning, can continue to be provided. The Roth lab is planning to continue building functional maps of disease genes and to expand the list of genes amenable to deep mutational scanning. A shortlist of $\sim$100 genes is planned to be addressed in the coming years. However, this undertaking is a costly one. Per 500 amino acid positions scanned, approximately \$5500 need to be spent on consumables, primarily for sequencing and oligos for POPCode mutagenesis. Assuming six genes being scanned in parallel, approximately 45 full-time employee hours need to be invested per gene. Ultimately, this undertaking cannot be shouldered by one lab alone and will require outreach to other groups. As shown in chapter~1 section~\ref{dmsIntro}, a fair number of groups are already performing deep mutational scans and may be interested in collaboration. As a first step, the Roth and Fowler labs are already collaborating with respect to mapping a number of heart disease associated genes.
 
 \subsection{Adaptation and extentions to DMS technology}
 \subsubsection{DMS in human cell lines}
@@ -58,7 +62,7 @@ UBE2I is known to be directly targeted by many viruses, such as HIV and EBV,  th
 \end{figure}
 
 \subsubsection{Advances in computational prediction of disease variants}
-As the number of functional maps produced via DMS grows, so does the its value as training data for \textit{in silico} prediction methods. Currently the number of genes scanned is not yet representative enough to cover the functional diversity of the proteome. However, Yingzhou Wu in the Roth Lab has already begun to explore its potential value for extrapolation. In an initial experiment, he was able to show that a machine learning method trained on the functional data obtained for UBE2I was able to make better predictions towards the effects of mutations in SUMO1 than if trained on the data set underlying PolyPhen-2 (HumDiv). Thus, with each new functional map added to our variant atlas, computational prediction method have the potential to become more powerful.
+As the number of functional maps produced via DMS grows, so does their value as training data for \textit{in silico} prediction methods. Currently the number of genes scanned is not yet representative enough to cover the functional diversity of the proteome. However, Yingzhou Wu in the Roth Lab has already begun to explore its potential value for extrapolation. In an initial experiment, he was able to show that a machine learning method trained on the functional data obtained for UBE2I was able to make better predictions towards the effects of mutations in SUMO1 than if trained on the data set underlying PolyPhen-2 (HumDiv). Thus, with each new functional map added to our variant atlas, computational prediction method have the potential to become more powerful.
 %  -> FUNSUM
 
 \subsubsection{Functional classification of amino acid positions}
