--- a/introduction.tex
+++ b/introduction.tex
@@ -6,7 +6,7 @@
 \chapter{Introduction}
 \label{ch:intro}
 
-Given the constantly improving cost and speed of genome sequencing, it is reasonable to expect that within the coming decades personal genomes will be known for a substantial part of the global populace. Unfortunately, our limited ability to interpret the variation within stands in stark contrast with this development. Even when only considering mutations in coding regions of the genome, the effects of most missense variants are not known. While a number of computational approaches exist to make predictions as to the effects of coding variants, they are currently not reliable enough for clinical use. By comparison, laboratory assays produce more trustworthy results, but until recently did not scale to the space of all possible mutations. The development of Deep Mutational Scanning~\cite{fowler_high-resolution_2010} has now made this endeavour possible. In the following sections, each of these issues will be discussed in more detail.
+Given the constantly improving cost and speed of genome sequencing, it is reasonable to expect that within the coming decades personal genomes will be known for a substantial part of the global populace. Unfortunately, our limited ability to interpret the variation within stands in stark contrast with this development. Even when only considering mutations in coding regions of the genome, the effects of most missense variants are not known. While a number of computational approaches exist to make predictions as to the effects of coding variants, they are currently not reliable enough for clinical use. By comparison, laboratory assays produce more trustworthy results, but until recently did not scale to the space of all possible mutations. The development of Deep Mutational Scanning~\cite{fowler_high-resolution_2010,ernst_coevolution_2010,hietpas_experimental_2011} has now made this endeavour possible. In the following sections, each of these issues will be discussed in more detail.
 
 \section{The Genotype-Phenotype Problem}
 \label{introGenoPheno}
@@ -62,7 +62,7 @@ The only major drawback of yeast complementation is that currently only $\sim 20
 \section{Deep Mutational Scanning}
 \label{dmsIntro}
 
-Complementation and Y2H promise to be useful tools in the classification of variants of uncertain significance. Yet applying them to retroactively test variants only once they have been found in the clinic would be a slow process. Instead, a proactive approach could prove to be more useful: Building an atlas of the functional effects of all possible variants before they are observed in a patient. Indeed, given the size of the human population and the frequency of \textit{de novo} mutation~\cite{acuna-hidalgo_new_2016}, every missense variant that can possibly exist (and is not fundamentally incompatible with life) can be expected to occur on average in 46 individuals\footnote{Back-of-envelope calculation: $\frac{7.4 \text{bn humans} \times 0.6 \text{ de-novo exome SNVs}}{30\text{Mb exome} \times 3 \text{ possible SNVs}} \approx 46\frac{\text{humans}}{\text{bp}}$}. However, assaying all possible variants in known disease genes would require massive parallelization. Indeed such parallelization efforts have previously been described, albeit not primarily for the reclassification of VUS. Fowler and colleagues have pioneered a technology called Deep Mutational Scanning (DMS)~\cite{fowler_high-resolution_2010}, which can be thought of as a natural extension to Alanine Scanning~\cite{cunningham_high-resolution_1989}, expanding it into the space of all possible amino acid changes. Fowler \etal's original paper has since inspired a growing number of similar efforts by other groups~\cite{ernst_coevolution_2010,hietpas_experimental_2011,fujino_robust_2012,adkar_protein_2012,mclaughlin_jr_spatial_2012,schlinkmann_critical_2012,whitehead_optimization_2012,traxlmayr_construction_2012,wu_systematic_2013,roscoe_analyses_2013,starita_activity-enhancing_2013,procko_computational_2013,tinberg_computational_2013,jiang_latent_2013,kim_high-throughput_2013,melamed_deep_2013,forsyth_deep_2013,wagenaar_resistance_2014,firnberg_comprehensive_2014,olson_comprehensive_2014,melnikov_comprehensive_2014,bloom_experimentally_2014,thyagarajan_inherent_2014,stiffler_evolvability_2015,doud_site-specific_2015,kitzman_massively_2015,starita_massively_2015,mishra_systematic_2016,doud_accurate_2016,mavor_determination_2016,majithia_prospective_2016}. Tables~\ref{table:DMSstudiesTP} and \ref{table:DMSstudiesMethods} list a selection of these studies that showcase the breadth of methodologies that has since emerged. 
+Complementation and Y2H promise to be useful tools in the classification of variants of uncertain significance. Yet applying them to retroactively test variants only once they have been found in the clinic would be a slow process. Instead, a proactive approach could prove to be more useful: Building an atlas of the functional effects of all possible variants before they are observed in a patient. Indeed, given the size of the human population and the frequency of \textit{de novo} mutation~\cite{acuna-hidalgo_new_2016}, every missense variant that can possibly exist (and is not fundamentally incompatible with life) can be expected to occur on average in 46 individuals\footnote{Back-of-envelope calculation: $\frac{7.4 \text{bn humans} \times 0.6 \text{ de-novo exome SNVs}}{30\text{Mb exome} \times 3 \text{ possible SNVs}} \approx 46\frac{\text{humans}}{\text{bp}}$}. However, assaying all possible variants in known disease genes would require massive parallelization. Indeed such parallelization efforts have previously been described, albeit not primarily for the reclassification of VUS. The winter semester of 2010/11 saw three papers by Fowler~\etal\ \cite{fowler_high-resolution_2010}, Ernst~\etal\ \cite{ernst_coevolution_2010} and Hietpas~\etal\ \cite{hietpas_experimental_2011} that collectively pioneered a technology called Deep Mutational Scanning (DMS). DMS can be thought of as a natural extension to Alanine Scanning~\cite{cunningham_high-resolution_1989}, expanding it into the space of all possible amino acid changes. These seminal papers have since inspired a growing number of similar efforts by other groups~\cite{fujino_robust_2012,adkar_protein_2012,mclaughlin_jr_spatial_2012,schlinkmann_critical_2012,whitehead_optimization_2012,traxlmayr_construction_2012,wu_systematic_2013,roscoe_analyses_2013,starita_activity-enhancing_2013,procko_computational_2013,tinberg_computational_2013,jiang_latent_2013,kim_high-throughput_2013,melamed_deep_2013,forsyth_deep_2013,wagenaar_resistance_2014,firnberg_comprehensive_2014,olson_comprehensive_2014,melnikov_comprehensive_2014,bloom_experimentally_2014,thyagarajan_inherent_2014,stiffler_evolvability_2015,doud_site-specific_2015,kitzman_massively_2015,starita_massively_2015,mishra_systematic_2016,doud_accurate_2016,mavor_determination_2016,majithia_prospective_2016}. Tables~\ref{table:DMSstudiesTP} and \ref{table:DMSstudiesMethods} list a selection of these studies that showcase the breadth of methodologies that has since emerged. 
 Deep Mutational Scanning, as performed in these studies, can be broken down into a number of experimental and computational components: (1) Mutagenesis; (2) Selection of functional variants; (3) Sequencing of the selected and control populations; and (4) Computational analysis. In the following sections we will review the different previous implementations of these components in detail.
 
 
@@ -148,7 +148,10 @@ When considering previous DMS studies in the context of VUS classification, a nu
 
 In the following chapters, we will evaluate the performance of Deep Mutational Scanning with respect to its ability to detect the effects of different variants on overall function. However, as mentioned in section~\ref{introGenoPheno}, many genes perform multiple functions and sub-functions and the proteins they encode engage in multiple interactions with other molecules. Thus, beyond the amenability of the proteins to the employed assays, an ideal testing ground would be comprised of a biological system that is both mechanistically complex and has been well studied previously in terms of structure and mechanism. This would allow for an examination of the assay's capabilities of detecting if and how a variant that damages an individual sub-function is reflected in its overall functional impact. 
 
-The Sumoylation life cycle does not only fulfill these criteria, but is also of great biological importance. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behaviour, especially in terms of localization and physical interactions~\cite{geiss-friedlander_concepts_2007}. Sumoylation plays an important role in a large number of cellular processes~\cite{geiss-friedlander_concepts_2007}. It is therefore not surprising that the core members of the pathway are essential genes~\cite{nacerddine_sumo_2005}.
+The Sumoylation life cycle does not only fulfill these criteria~\cite{jiang_two-hybrid_1996}, but is also of great biological importance. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behaviour, especially in terms of localization and physical interactions~\cite{geiss-friedlander_concepts_2007}. Sumoylation plays an important role in a large number of cellular processes~\cite{geiss-friedlander_concepts_2007}. It is therefore not surprising that the core members of the pathway are essential genes~\cite{nacerddine_sumo_2005}.
+
+% Jiang, W. & Koltin, Y. Two-hybrid interaction of a human UBC9 homolog with centromere proteins ofSaccharomyces cerevisiae. Mol. Gen. Genet. 251, 153–160 (1996).
+
 
 \begin{figure}
 	\centering
